# video-store

./: .gitignore  README.md  docker-compose.yaml
client/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
client/src/app/: layout.js  page.js  room.jsx
client/src/app/_components/: navbar.jsx  sessionProviderAuth.jsx  uploadForm.jsx
client/src/app/api/auth/[...nextauth]/: route.js
client/src/app/api/videos/: route.js
client/src/app/pages/: auth.jsx  home.jsx  videoplayer.jsx
client/src/app/upload/: page.jsx
client/src/app/videoplayer/: page.jsx
transcoder_service/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  start.sh  transcode.py
transcoder_service/db/: database.py  models.py
transcoder_service/kafka/: kafka.py
upload_service/: .dockerignore  .gitignore  Dockerfile  __main__.py  alembic.ini  main.py  pyproject.toml  start.sh
upload_service/api/v1/: __init__.py  upload.py
upload_service/core/: config.py
upload_service/crud/: video.py
upload_service/db/: database.py  deps.py  models.py
upload_service/db/migrations/: env.py
upload_service/db/migrations/versions/: 182ac7e592ad_add_unique_contraint_to_hls_key.py  4e23b1ed4ed3_update_videometadata_model.py  789221d11ffe_initial_schema.py  adfa81afb532_add_hls_table.py
upload_service/kafka/: kafka.py
upload_service/routers/: upload.py
watch_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
watch_service/db/: database.py
